# pear

./: .editorconfig  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml
.github/workflows/: ci.yml  main.yml
daemon/: Cargo.toml
daemon/examples/: ping.rs
daemon/src/: command.rs  lib.rs  main.rs
daemon/src/dht/: mod.rs
daemon/src/messaging/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.rs
