[package]
name = "pear-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros", "kad", "tokio", "full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
automerge = "0.5.11"
serde-automerge = "0.1.0"
dirs = "5.0"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
bytes = "1.6.1"
log = "0.4.22"
env_logger = "0.11.3"
serde_json = "1.0.120"
serde_bytes = "0.11.15"
bincode = "1.3.3"
chrono = "0.4.38"
